@@ -196,4 +196,6 @@ export(
   , qtR, qtR1
   , r_pois, r_pois_expr
     ## no! titleR.exp (FIXME eventually: should not need such a global)
+
+  , chebyshevPoly, chebyshevEval, chebyshev_nc
 )
